YoAdded styles. Installed modular scale with webpack and set up variables. Added fonts & interactions js modules. Added HTML snippets and noscript element.

--- a/source/sass/app.scss
+++ b/source/sass/app.scss
@@ -29,6 +29,13 @@
 
 
 /******************************************************************************
+ * Modular Scale for Typography & Sizing
+*******************************************************************************/
+@import "~modularscale-sass/stylesheets/modularscale";
+
+
+
+/******************************************************************************
  * Modules
 *******************************************************************************/
 @import "modules/footer";
