--- a/source/sass/modules/_header.scss
+++ b/source/sass/modules/_header.scss
@@ -4,3 +4,9 @@
  * Custom CSS styles that relate to the header area.
  * Note: Not all Squarespace templates have the same classes/IDs.
 *******************************************************************************/
+#landing {
+	//remove padding on code block containing noscript tag
+	.sqs-block-code {
+		padding: 0;
+	}
+}
