Added mobile styles for image blocks

--- a/source/sass/app.scss
+++ b/source/sass/app.scss
@@ -8,6 +8,7 @@
 /******************************************************************************
  * Config
 *******************************************************************************/
+@import "~modularscale-sass/stylesheets/modularscale"; 
 @import "config/variables";
 @import "config/mixins";
 
@@ -18,6 +19,7 @@
 *******************************************************************************/
 @import "core/grid";
 @import "core/icons";
+@import "core/mobile";
 
 
 
@@ -25,13 +27,6 @@
  * UI & State
 *******************************************************************************/
 @import "state/modifiers";
-
-
-
-/******************************************************************************
- * Modular Scale for Typography & Sizing
-*******************************************************************************/
-@import "~modularscale-sass/stylesheets/modularscale";
 
 
 
