--- a/source/sass/config/_variables.scss
+++ b/source/sass/config/_variables.scss
@@ -47,7 +47,9 @@ $color-brand-blue: #0048a5;
 
 
 /******************************************************************************
- * Modular Scale (see docs at modularscale.com)
+ * Modular Scale 
+ * (see docs at https://github.com/modularscale/modularscale-sass 
+ *  or modularscale.com)
 *******************************************************************************/
 $modularscale: (
   base: 20px,
