--- a/source/sass/config/_variables.scss
+++ b/source/sass/config/_variables.scss
@@ -43,6 +43,7 @@ $color-background-accent: #353535;
 
 // simple way to keep a reference of brand palette colors
 $color-brand-primary: #8b2332;
+$color-brand-secondary: #7E0032;
 $color-brand-blue: #0048a5;
 
 
