--- a/template/assets/css/app.css
+++ b/template/assets/css/app.css
@@ -578,21 +578,60 @@
 /******************************************************************************
  * Squarespace Block - Form
  *
- * Custom CSS styles that relate to Squarespace Image Blocks.
+ * Custom CSS styles that relate to Squarespace Form Blocks & embedded forms (MailChimp).
 *******************************************************************************/
-.sqs-block-form .form-wrapper .form-inner-wrapper {
+.sqs-block-form .form-wrapper .form-inner-wrapper, #mc_embed_signup .form-inner-wrapper {
   color: #0048a5; }
-  .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field .caption {
-    font-size: 16px; }
-  .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field .field-element {
-    background: #f6f6f6;
-    border-color: #c9c9c9 #c9c9c9 #0048a5;
-    border-radius: 2px;
-    border-width: 2px; }
-    .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field .field-element:focus {
-      border-color: #0069f2; }
-  .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field.select .title {
+  .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field, #mc_embed_signup .form-inner-wrapper .field-list .field {
+    width: 100%;
+    padding-bottom: 0; }
+    .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field .caption, #mc_embed_signup .form-inner-wrapper .field-list .field .caption {
+      font-size: 16px; }
+    .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field .field-element, #mc_embed_signup .form-inner-wrapper .field-list .field .field-element {
+      background: #f6f6f6;
+      border-color: #c9c9c9;
+      border-radius: 2px;
+      border-width: 2px; }
+      .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field .field-element:focus, #mc_embed_signup .form-inner-wrapper .field-list .field .field-element:focus {
+        border-color: #0048a5; }
+  .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field.select .title, #mc_embed_signup .form-inner-wrapper .field-list .field.select .title {
     display: inline-block; }
+  .sqs-block-form .form-wrapper .form-inner-wrapper .field-list .field.select select, #mc_embed_signup .form-inner-wrapper .field-list .field.select select {
+    margin-left: 2px;
+    width: auto; }
+
+.Site #mc_embed_signup {
+  background: transparent;
+  clear: left;
+  font: 20px futura-pt, Futura, Helvetica, sans-serif; }
+  .Site #mc_embed_signup form {
+    padding: 0; }
+  .Site #mc_embed_signup .field-list .fields.name .field {
+    clear: none;
+    float: left;
+    padding-bottom: 0;
+    width: 48%; }
+  .Site #mc_embed_signup .button {
+    background-color: #0048a5;
+    border-color: #0048a5;
+    border-radius: 0;
+    border-width: 0;
+    font-family: futura-pt;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    line-height: 1em;
+    display: inline-block;
+    width: auto;
+    height: auto;
+    padding: 1em 2.5em;
+    text-align: center;
+    cursor: pointer;
+    outline: none; }
+    .Site #mc_embed_signup .button:hover {
+      background-color: #336cb7; }
 
 /******************************************************************************
  * Collections
