Standardized forms, fixed error in formChange function, separated formListener from formChange for cleaner code

--- a/source/sass/collections/_collection-type-index.scss
+++ b/source/sass/collections/_collection-type-index.scss
@@ -3,4 +3,13 @@
  *
  * Custom CSS styles that relate to Index pages.
 *******************************************************************************/
-.collection-type-index {}
+.collection-type-index {
+    .Index-page-content h2:first-of-type::after {
+        border-top: .0666em solid;
+        content: "";
+        display: block;
+        margin: .544em 0 .544em;
+        position: relative;
+        width: 24.5%;
+    }
+}
