--- a/source/sass/modules/_footer.scss
+++ b/source/sass/modules/_footer.scss
@@ -4,3 +4,8 @@
  * Custom CSS styles that relate to the footer area.
  * Note: Not all Squarespace templates have the same classes/IDs.
 *******************************************************************************/
+.Footer {
+    button, input, optgroup, select, textarea {
+        color: #1a1a1a;
+    }
+}
